--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,17 @@
     font-size: 14px;
   }
 
+  .scroll-container {
+    overflow-x: auto;
+    white-space: nowrap;
+    -webkit-overflow-scrolling: touch;
+    scrollbar-width: none;
+  }
+
+  .scroll-container::-webkit-scrollbar {
+    display: none;
+  }
+
   .font-title {
     font-family: var(--font-title);
   }
@@ -23,6 +34,10 @@
   }
 
   .hover-color:hover {
+    color: var(--color-hover);
+  }
+
+  .active-color {
     color: var(--color-hover);
   }
 }
